--- a/Josh/ControllerOverlay.css
+++ b/Josh/ControllerOverlay.css
@@ -157,7 +157,7 @@ background-position: 0 -70px;
     position: absolute;
     width: 55px;
     height: 55px;
-    background: url(face.png);
+    background: url(.png);
 }
 
 .ds4 .button.pressed {
@@ -228,8 +228,8 @@ background-position: 0 -70px;
     left: 92px;
 }
 
-.ds4 .face {
-    background: url(face.png);
+.ds4 . {
+    background: url(dpad.png);
     position: absolute;
 }
 
