--- a/Josh/ControllerOverlay.css
+++ b/Josh/ControllerOverlay.css
@@ -1,6 +1,6 @@
 /*BEGIN PS4 Controller Styling*/
 .controller.ds4 {
-    background: url(base.gif);
+    background: url(https://i.imgur.com/bpZRspk.gif);
     height: 598px;
     width: 806px;
     /*    margin-left: -403px;
