--- a/Josh/ControllerOverlay.css
+++ b/Josh/ControllerOverlay.css
@@ -1,6 +1,6 @@
 /*BEGIN PS4 Controller Styling*/
 .controller.ds4 {
-    background: url(https://i.imgur.com/aKFBZI1.gif);
+    background: url(base.png);
     height: 598px;
     width: 806px;
     /*    margin-left: -403px;
@@ -77,7 +77,7 @@
 }
 
 .ds4 .touchpad.pressed {
-    background: url(ps4-assets/touchpad.svg) no-repeat center;
+    background: url(touchpad.gif) no-repeat center;
 }
 
 .ds4 .meta {
